# mvn

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  README.md  build-web-examples.sh
.github/: copilot-instructions.md
.github/workflows/: build.yml  ci.yml  code-quality.yml  coverage.yml  memory-check.yml  web.yml
cmake/: macos.cmake  mvnConfig.cmake.in  web.cmake  windows.cmake
cmake/templates/: minshell.html
docs/: code-style.md  flecs4-migration.md  sdl3-migration.md  sdl3_image-migration.md  sdl3_ttf-migration.md
examples/: CMakeLists.txt  empty.c  hello-world.c  simple-text.c  simple-texture.c
include/mvn/: mvn-core.h  mvn-error.h  mvn-file.h  mvn-hashmap.h  mvn-list.h  mvn-logger.h  mvn-string.h  mvn-text.h  mvn-texture.h  mvn-types.h  mvn-utils.h  mvn-window.h  mvn.h
source/: mvn-core.c  mvn-error.c  mvn-file.c  mvn-hashmap.c  mvn-list.c  mvn-logger.c  mvn-string.c  mvn-text.c  mvn-texture.c  mvn-utils.c  mvn-window.c  mvn.c
src/: array_list.c  array_list.h  hashmap.c  hashmap.h  main.c  main.cpp  minshell.html
tests/: CMakeLists.txt
tests/include/: mvn-core-test.h  mvn-error-test.h  mvn-file-test.h  mvn-hashmap-test.h  mvn-list-test.h  mvn-logger-test.h  mvn-string-test.h  mvn-test-utils.h  mvn-text-test.h  mvn-texture-test.h  mvn-window-test.h
tests/source/: mvn-core-test.c  mvn-error-test.c  mvn-file-test.c  mvn-hashmap-test.c  mvn-list-test.c  mvn-logger-test.c  mvn-string-test.c  mvn-test.c  mvn-text-test.c  mvn-texture-test.c  mvn-window-test.c
